{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 28,
  "lineage": "0a8606bf-2026-ddb0-2c60-e9caec58990a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rhel10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0167eca66536f2900",
            "arn": "arn:aws:ec2:us-east-1:124305488008:instance/i-02a82dffc02dc6463",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a82dffc02dc6463",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01322627c21864916"
              }
            ],
            "primary_network_interface_id": "eni-01322627c21864916",
            "private_dns": "ip-10-0-1-143.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-3-95-226-150.compute-1.amazonaws.com",
            "public_ip": "3.95.226.150",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01987e655eaa24b63",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f158a8bc67192135",
            "tags": {
              "Name": "rhel10-ec2"
            },
            "tags_all": {
              "Name": "rhel10-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ac3f5e0e835b0eee"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124305488008",
            "id": "i-02a82dffc02dc6463",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.rhel10_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.rhel10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124305488008:internet-gateway/igw-07cc151c5212bd0f1",
            "id": "igw-07cc151c5212bd0f1",
            "owner_id": "124305488008",
            "region": "us-east-1",
            "tags": {
              "Name": "rhel10-igw"
            },
            "tags_all": {
              "Name": "rhel10-igw"
            },
            "vpc_id": "vpc-0265b3b3067e017f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124305488008:route-table/rtb-06cce09dd488e05e5",
            "id": "rtb-06cce09dd488e05e5",
            "owner_id": "124305488008",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07cc151c5212bd0f1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rhel10-public-rt"
            },
            "tags_all": {
              "Name": "rhel10-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0265b3b3067e017f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124305488008",
            "id": "rtb-06cce09dd488e05e5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0231b28bdc7fc9cef",
            "region": "us-east-1",
            "route_table_id": "rtb-06cce09dd488e05e5",
            "subnet_id": "subnet-0f158a8bc67192135"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rhel10_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124305488008:security-group/sg-0ac3f5e0e835b0eee",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac3f5e0e835b0eee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rhel10-sg",
            "name_prefix": "",
            "owner_id": "124305488008",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rhel10-sg"
            },
            "tags_all": {
              "Name": "rhel10-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0265b3b3067e017f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124305488008",
            "id": "sg-0ac3f5e0e835b0eee",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124305488008:subnet/subnet-0f158a8bc67192135",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f158a8bc67192135",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124305488008",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "rhel10-public-subnet"
            },
            "tags_all": {
              "Name": "rhel10-public-subnet"
            },
            "vpc_id": "vpc-0265b3b3067e017f7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124305488008",
            "id": "subnet-0f158a8bc67192135",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124305488008:vpc/vpc-0265b3b3067e017f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0993fa476d2ad1c44",
            "default_route_table_id": "rtb-0f01099f42cc7b280",
            "default_security_group_id": "sg-00902534e9865e3e4",
            "dhcp_options_id": "dopt-08d41b1f391dc98e9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0265b3b3067e017f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f01099f42cc7b280",
            "owner_id": "124305488008",
            "region": "us-east-1",
            "tags": {
              "Name": "rhel10-vpc"
            },
            "tags_all": {
              "Name": "rhel10-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "124305488008",
            "id": "vpc-0265b3b3067e017f7",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}